--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "prettier-language-server",
   "version": "1.0.0",
-  "type": "module",
   "license": "MIT",
+  "type": "module",
   "exports": {
     ".": {
       "types": "./lib/index.d.ts",
@@ -19,7 +19,12 @@
     "lint:prettier": "prettier --check ./src",
     "lint:tsc": "tsc --noEmit"
   },
+  "dependencies": {
+    "vscode-languageserver": "^8.1.0",
+    "vscode-languageserver-textdocument": "^1.0.8"
+  },
   "devDependencies": {
+    "@types/node": "^20.1.0",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
     "concurrently": "^8.0.1",
