--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "lint:tsc": "tsc --noEmit"
   },
   "dependencies": {
+    "find-up": "^6.3.0",
+    "resolve": "^1.22.2",
     "vscode-languageserver": "^8.1.0",
     "vscode-languageserver-textdocument": "^1.0.8"
   },
   "devDependencies": {
     "@types/node": "^20.1.0",
     "@types/prettier": "^2.7.2",
+    "@types/resolve": "^1.20.2",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
     "concurrently": "^8.0.1",
