--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     }
   },
   "scripts": {
-    "compile": "tsc",
+    "compile": "tsc --emitDeclarationOnly && node ./scripts/build.mjs",
     "fix": "npm run fix:eslint && npm run fix:prettier",
     "fix:eslint": "npm run lint:eslint -- --fix",
     "fix:prettier": "npm run lint:prettier -- --write",
     "lint": "concurrently \"npm:lint:*\"",
     "lint:eslint": "eslint --ext .ts ./src",
     "lint:prettier": "prettier --check ./src",
-    "lint:tsc": "tsc --noEmit"
+    "lint:tsc": "tsc --noEmit",
+    "clean": "rm -rf ./lib"
   },
   "dependencies": {
     "find-up": "^6.3.0",
@@ -33,6 +34,7 @@
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
     "concurrently": "^8.0.1",
+    "esbuild": "^0.17.19",
     "eslint": "^8.40.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-unicorn": "^47.0.0",
